--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "chart.js": "^3.9.1",
+        "sweetalert": "^2.1.2",
         "vue-router": "^3.6.5"
     }
 }
